style: fix home height on mobile mode

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -2,9 +2,7 @@
 @import url('https://fonts.cdnfonts.com/css/terminal');
 
 #app {
-    width: 100%;
     height: 100%;
-
     font-family: 'Roboto';
     color: var(--text-color-primary);
     background-color: var(--background-color);
